OSX: Fix T40749, own mistake for m_lionStyleFullScreen condition